syntax = "proto3";

package auth;

option go_package = "proto/auth/";

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string role = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  uint32 id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
}

message LoginResponse {
  string access_token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  uint32 id = 1;
  string email = 2;
  string role = 3;
}
